# keyboard

./: .gitignore
arduino/gadgets/: gadgets.ino
firmware/: Cargo.toml  README.md
firmware/.cargo/: config.toml
firmware/src/: debounce.rs  key_table.rs  main.rs
model/: keyboard.scad  mouser.FCStd
src/: main.rs
